shared.css
*{
    box-sizing: border-box;
}

body{
    margin: 0;
    background:  rgb(197,203,227);
}

main{
     /* height: calc(100vh - 3rem);  */
}
.modal{
    display: none;
    position: fixed;
    align-items: center;
    width: 100vw;
    left: 0;
    top: 0;
    height: 100vh;
    z-index: 100;
    background-color: rgba(0,0,0,0.5);
}

.modal__list{
    background-color: rgb(49,49,54);
    list-style: none; 
    width: 100%;
    height: 9rem;
    padding: 0;
}

.modal__elt{
    height: 50%;
}


.modal__elt a {
    font-size: 2rem;
    display: flex;
    height: 100%;
    justify-content: space-between; 
    padding: 0 1rem;
    align-items: center;
    text-transform: uppercase;
    color: white;
    text-decoration: none;
    border: 2px rgb(70, 70, 70) solid;
    border-top: none;
}

.modal__elt:first-of-type a {
    border-top: 2px rgb(70, 70, 70) solid;
}

.modal__elt a::after{
    content: url("./images/arrow-right.svg");
    width: 1rem;
    /*
    align-items: center;
    position: absolute;
    right: 0; */
}

.modal span{
    z-index: 2000;
    font-size: 4rem;
    color: rgb(214, 214, 214);
    position: absolute;
    right: 1rem;
    top: 3rem;
}

.modal span:hover,
.modal span:active{
    color: red;
}

.main-header {
    background-color: rgba(239,225,186,1);
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    z-index: 5;
    height: 3rem;
}

.main-header__logo-container{
    display: inline-block;
    position: absolute;
    right: 0;
    vertical-align: middle; 
    height: 100%;
    text-align: right;
}


.main-header__logo img {
    height: 100%;
}

.main-nav {
    display: none;
    z-index: 101;
}

.main-nav__list{
    margin: 0 1rem;
    list-style: none;
    text-align: center;
}

.main-nav__elt{
    display: inline-block;
    color: ;
    margin: 0 0.75rem;
    font-family: 'Hachi Maru Pop', cursive;
    
}

.main-nav__elt a {
    font-size: 1.5rem;
    color: rgb(255, 255, 255);
    text-decoration: none;
    padding : 0.75rem 0.3rem 0.3rem 0.3rem;
}

.main-nav__elt a:hover,
.main-nav__elt a:active{
    
    border-bottom: 2px solid rgb(64,86,161);
}

.hamburger-menu{
    height: 3rem;
    padding: 0.5rem 0;
    vertical-align: middle;
    display: inline-block;
    
}

.hamburger-menu img {
    height: 2rem;
    
}


#second-logo{
    display: none;
}

@media (min-width:40rem){
    .main-header__logo-container{
        position: static;
    }
    
    .hamburger-menu{
        display: none;
    }
    #second-logo {
        display: inline-block;
        position: absolute;
        right: 0;
    }

    .modal {
        display: none;
        background-color: transparent;
    }

    .main-nav {
        display: inline-block;
        text-align: left;
        width: calc(100% - 217px);
        vertical-align: middle;
    }

    .main-nav__list{
        margin: 0 1rem;
        list-style: none;
        text-align: center;
    }
    
    .main-nav__elt{
        display: inline-block;
        margin: 0 0.75rem;
        font-family: 'Hachi Maru Pop', cursive;
        
    }
    
    .main-nav__elt a {
        font-size: 1.5rem;
        color: rgb(64,86,161);
        text-decoration: none;
        padding : 0.75rem 0.3rem 0.3rem 0.3rem;
    }
    
    .main-nav__elt a:hover,
    .main-nav__elt a:active{
        
        border-bottom: 2px solid rgb(64,86,161);
    }
}

